--- a/src/components/articles/ArticlePromo.module.scss
+++ b/src/components/articles/ArticlePromo.module.scss
@@ -8,10 +8,13 @@
 }
 
 .agendy-do-pozornosti img {
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  overflow: hidden;
   aspect-ratio: 16 / 9;
 }
 
